--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@types/pdf-parse": "^1.1.4",
     "typescript": "^5.3.3",
     "tailwindcss": "^3.4.1",
+    "tailwindcss-animate": "^1.0.7",
     "postcss": "^8.4.33",
     "autoprefixer": "^10.4.17",
     "eslint": "^8.56.0",
