--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "postcss": "^8.4.33",
     "tailwindcss": "^3.4.1",
     "tailwindcss-animate": "^1.0.7",
+    "tsx": "^4.20.6",
     "typescript": "^5.3.3"
   }
 }
