--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "test:extraction": "npx tsx scripts/tests/test-document-extraction.ts"
   },
   "dependencies": {
+    "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-label": "^2.0.2",
