--- a/package.json
+++ b/package.json
@@ -8,14 +8,20 @@
     "npm": ">=10.0.0"
   },
   "scripts": {
-    "dev": "next dev -p 3004",
+    "dev": "next dev -p 3005",
     "build": "next build",
-    "start": "NODE_OPTIONS='--dns-result-order=ipv4first' next start -p ${PORT:-3004}",
+    "start": "NODE_OPTIONS='--dns-result-order=ipv4first' next start -p ${PORT:-3005}",
     "lint": "next lint",
     "type-check": "tsc --noEmit",
+    "test": "vitest",
+    "test:ui": "vitest --ui",
+    "test:coverage": "vitest run --coverage",
+    "test:watch": "vitest watch",
     "test:models": "npx tsx scripts/run-all-tests.ts",
     "test:embeddings": "npx tsx scripts/tests/test-embeddings.ts",
-    "test:extraction": "npx tsx scripts/tests/test-document-extraction.ts"
+    "test:extraction": "npx tsx scripts/tests/test-document-extraction.ts",
+    "sonar": "sonar-scanner",
+    "sonar:local": "npm run test:coverage && sonar-scanner"
   },
   "dependencies": {
     "@radix-ui/react-checkbox": "^1.0.4",
