--- a/package.json
+++ b/package.json
@@ -1,78 +1,63 @@
 {
   "name": "lightpoint-complaint-system",
-  "version": "1.0.0",
-  "description": "HMRC Complaint Management System for Accountants",
+  "version": "2.0.0",
   "private": true,
-  "engines": {
-    "node": ">=20.0.0",
-    "npm": ">=10.0.0"
-  },
   "scripts": {
     "dev": "next dev -p 3005",
     "build": "next build",
     "start": "NODE_OPTIONS='--dns-result-order=ipv4first' next start -p ${PORT:-3005}",
     "lint": "next lint",
     "type-check": "tsc --noEmit",
-    "test": "vitest",
-    "test:ui": "vitest --ui",
-    "test:coverage": "vitest run --coverage",
-    "test:watch": "vitest watch",
-    "test:models": "npx tsx scripts/run-all-tests.ts",
-    "test:embeddings": "npx tsx scripts/tests/test-embeddings.ts",
-    "test:extraction": "npx tsx scripts/tests/test-document-extraction.ts",
-    "sonar": "sonar-scanner",
-    "sonar:local": "npm run test:coverage && sonar-scanner"
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
+    "sonar": "sonar-scanner"
   },
   "dependencies": {
-    "@radix-ui/react-checkbox": "^1.0.4",
-    "@radix-ui/react-dialog": "^1.0.5",
-    "@radix-ui/react-dropdown-menu": "^2.0.6",
-    "@radix-ui/react-label": "^2.0.2",
-    "@radix-ui/react-progress": "^1.0.3",
-    "@radix-ui/react-select": "^2.0.0",
-    "@radix-ui/react-tabs": "^1.0.4",
-    "@radix-ui/react-toast": "^1.1.5",
-    "@radix-ui/react-tooltip": "^1.0.7",
-    "@supabase/auth-helpers-nextjs": "^0.8.7",
-    "@supabase/ssr": "^0.7.0",
-    "@supabase/supabase-js": "^2.39.0",
-    "@tanstack/react-query": "^4.36.1",
-    "@trpc/client": "^10.45.0",
-    "@trpc/react-query": "^10.45.0",
-    "@trpc/server": "^10.45.0",
-    "canvas": "^3.2.0",
-    "class-variance-authority": "^0.7.0",
-    "clsx": "^2.1.0",
-    "date-fns": "^3.0.6",
-    "docx": "^8.5.0",
-    "dotenv": "^17.2.3",
-    "file-saver": "^2.0.5",
-    "lucide-react": "^0.316.0",
-    "mammoth": "^1.7.2",
+    "@supabase/ssr": "^0.5.2",
+    "@supabase/supabase-js": "^2.47.10",
+    "@tanstack/react-query": "^5.62.8",
+    "@trpc/client": "^11.0.0-rc.687",
+    "@trpc/react-query": "^11.0.0-rc.687",
+    "@trpc/server": "^11.0.0-rc.687",
+    "@upstash/ratelimit": "^2.0.7",
+    "@upstash/redis": "^1.35.6",
+    "cheerio": "^1.0.0",
+    "mammoth": "^1.8.0",
     "next": "14.2.33",
-    "openai": "^4.24.1",
-    "pdf-parse": "^1.1.4",
-    "pdf2pic": "^3.2.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "superjson": "^2.2.1",
-    "tailwind-merge": "^2.2.0",
-    "xlsx": "^0.18.5",
-    "zod": "^3.22.4"
+    "pdf-parse": "^1.1.1",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-markdown": "^9.0.1",
+    "redis": "^4.7.1",
+    "superjson": "^2.2.2",
+    "tesseract.js": "^5.1.1",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
-    "@types/file-saver": "^2.0.7",
-    "@types/node": "^20.11.5",
-    "@types/pdf-parse": "^1.1.4",
-    "@types/react": "^18.2.48",
-    "@types/react-dom": "^18.2.18",
-    "autoprefixer": "^10.4.17",
-    "eslint": "^8.56.0",
-    "eslint-config-next": "14.1.0",
-    "postcss": "^8.4.33",
-    "tailwindcss": "^3.4.1",
-    "tailwindcss-animate": "^1.0.7",
-    "tsx": "^4.20.6",
-    "typescript": "^5.3.3"
+    "@types/jest": "^29.5.14",
+    "@types/node": "^22",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
+    "autoprefixer": "^10.4.20",
+    "eslint": "^8",
+    "eslint-config-next": "14.2.33",
+    "husky": "^9.1.7",
+    "jest": "^29.7.0",
+    "lint-staged": "^15.2.11",
+    "postcss": "^8.4.49",
+    "prettier": "^3.4.2",
+    "sonarqube-scanner": "^3.3.0",
+    "tailwindcss": "^3.4.17",
+    "typescript": "^5"
+  },
+  "lint-staged": {
+    "*.{ts,tsx}": [
+      "eslint --fix",
+      "prettier --write"
+    ],
+    "*.{json,md}": [
+      "prettier --write"
+    ]
   }
 }
