--- a/package.json
+++ b/package.json
@@ -20,16 +20,17 @@
     "@trpc/client": "^11.0.0-rc.687",
     "@trpc/react-query": "^11.0.0-rc.687",
     "@trpc/server": "^11.0.0-rc.687",
-    "@upstash/ratelimit": "^2.0.7",
-    "@upstash/redis": "^1.35.6",
+    "@upstash/ratelimit": "^2.0.4",
+    "@upstash/redis": "^1.34.3",
     "cheerio": "^1.0.0",
+    "lucide-react": "^0.263.1",
     "mammoth": "^1.8.0",
     "next": "14.2.33",
     "pdf-parse": "^1.1.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-markdown": "^9.0.1",
-    "redis": "^4.7.1",
+    "redis": "^4.7.0",
     "superjson": "^2.2.2",
     "tesseract.js": "^5.1.1",
     "zod": "^3.24.1"
