--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "sonar": "sonar-scanner"
   },
   "dependencies": {
+    "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/ssr": "^0.5.2",
     "@supabase/supabase-js": "^2.47.10",
     "@tanstack/react-query": "^5.62.8",
@@ -23,6 +24,8 @@
     "@upstash/ratelimit": "^2.0.4",
     "@upstash/redis": "^1.34.3",
     "cheerio": "^1.0.0",
+    "date-fns": "^3.6.0",
+    "docx": "^8.5.0",
     "lucide-react": "^0.263.1",
     "mammoth": "^1.8.0",
     "next": "14.2.33",
