--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "sonar": "sonar-scanner"
   },
   "dependencies": {
+    "@radix-ui/react-checkbox": "^1.3.3",
+    "@radix-ui/react-slot": "^1.2.4",
     "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/ssr": "^0.5.2",
     "@supabase/supabase-js": "^2.47.10",
@@ -24,8 +26,11 @@
     "@upstash/ratelimit": "^2.0.4",
     "@upstash/redis": "^1.34.3",
     "cheerio": "^1.0.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
     "docx": "^8.5.0",
+    "file-saver": "^2.0.5",
     "lucide-react": "^0.263.1",
     "mammoth": "^1.8.0",
     "next": "14.2.33",
@@ -35,6 +40,7 @@
     "react-markdown": "^9.0.1",
     "redis": "^4.7.0",
     "superjson": "^2.2.2",
+    "tailwind-merge": "^2.6.0",
     "tesseract.js": "^5.1.1",
     "zod": "^3.24.1"
   },
