--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "zod": "^3.24.1"
   },
   "devDependencies": {
+    "@types/file-saver": "^2.0.7",
     "@types/jest": "^29.5.14",
     "@types/node": "^22",
     "@types/react": "^18",
@@ -63,6 +64,7 @@
     "prettier": "^3.4.2",
     "sonarqube-scanner": "^3.3.0",
     "tailwindcss": "^3.4.17",
+    "tailwindcss-animate": "^1.0.7",
     "typescript": "^5"
   },
   "lint-staged": {
