feat: add Redis testing + SonarCloud integration
Redis Setup:
✅ Test script for both Redis instances (caching + rate limiting)
✅ Comprehensive setup guide (REDIS_SONARCLOUD_SETUP.md)
✅ Support for Railway Plugin or Upstash
✅ Troubleshooting guide included

SonarCloud Setup:
✅ GitHub Actions workflow for automatic scanning
✅ sonar-project.properties configuration
✅ Excludes node_modules, .next, scripts, tests
✅ Ready for continuous code quality monitoring

Usage:
- Test Redis: npx tsx scripts/test-redis.ts
- Follow guide: REDIS_SONARCLOUD_SETUP.md
- Add SONAR_TOKEN to GitHub secrets
- Push triggers automatic code quality scan

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,58 +1,21 @@
-sonar.projectKey=lightpoint-v2
+sonar.projectKey=oracleconsulting_lightpoint-2.0
 sonar.organization=oracleconsulting
+
+# This is the name and version displayed in the SonarCloud UI.
 sonar.projectName=Lightpoint v2.0
 sonar.projectVersion=2.0.0
 
-# Source directories
-sonar.sources=app,components,lib,types,contexts
-sonar.tests=tests,scripts/tests
+# Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
+sonar.sources=app,components,contexts,lib,middleware.ts
 
-# File encoding
+# Exclude files that shouldn't be scanned
+sonar.exclusions=**/*.test.ts,**/*.test.tsx,**/node_modules/**,**/.next/**,**/dist/**,**/build/**,scripts/**
+
+# Encoding of the source code. Default is default system encoding
 sonar.sourceEncoding=UTF-8
 
-# Exclusions (don't scan these)
-sonar.exclusions=node_modules/**,\
-  .next/**,\
-  coverage/**,\
-  dist/**,\
-  build/**,\
-  **/*.test.ts,\
-  **/*.spec.ts,\
-  **/*.d.ts,\
-  **/*.config.ts,\
-  **/*.config.js,\
-  supabase/**,\
-  knowledge-uploads/**,\
-  scripts/**
+# Language
+sonar.language=ts
 
-# Test exclusions
-sonar.test.exclusions=**/*.test.ts,**/*.spec.ts
-
-# Coverage
-sonar.typescript.lcov.reportPaths=coverage/lcov.info
-sonar.javascript.lcov.reportPaths=coverage/lcov.info
-sonar.coverage.exclusions=**/*.test.ts,\
-  **/*.spec.ts,\
-  **/*.config.ts,\
-  **/types/**
-
-# Language-specific settings
-sonar.typescript.tsconfigPath=tsconfig.json
-
-# Quality gates
-sonar.qualitygate.wait=true
-
-# Code duplication
-sonar.cpd.exclusions=**/*.test.ts,**/*.spec.ts
-
-# Issue exclusions (customize as needed)
-# sonar.issue.ignore.multicriteria=e1,e2
-# sonar.issue.ignore.multicriteria.e1.ruleKey=typescript:S1481
-# sonar.issue.ignore.multicriteria.e1.resourceKey=**/*.ts
-
-# Project metadata
-sonar.links.homepage=https://lightpoint.uk
-sonar.links.ci=https://github.com/oracleconsulting/lightpoint-2.0/actions
-sonar.links.scm=https://github.com/oracleconsulting/lightpoint-2.0
-sonar.links.issue=https://github.com/oracleconsulting/lightpoint-2.0/issues
-
+# Test results (when you add tests)
+# sonar.javascript.lcov.reportPaths=coverage/lcov.info
