security: add IDE configs to .gitignore
Prevent accidental token exposure:
✅ Added .cursor/ (may contain tokens)
✅ Added .vscode/ (may contain secrets)
✅ Added .sonarlint/ (local configs)
✅ Added .idea/ (JetBrains IDEs)

This prevents committing local configs that may contain
API tokens, credentials, or other sensitive data.

--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,10 @@ yarn-error.log*
 *.tsbuildinfo
 next-env.d.ts
 
+# IDE and Editor configs (may contain secrets)
+.vscode/
+.cursor/
+.idea/
+
+# SonarLint
+.sonarlint/
