--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "next dev -p 3005",
     "build": "next build",
     "start": "NODE_OPTIONS='--dns-result-order=ipv4first' next start -p ${PORT:-3005}",
-    "lint": "next lint",
+    "lint": "next lint --max-warnings 9999",
     "type-check": "tsc --noEmit",
     "test": "jest",
     "test:watch": "jest --watch",
