--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "date-fns": "^3.6.0",
     "docx": "^8.5.0",
     "file-saver": "^2.0.5",
+    "framer-motion": "^12.23.24",
     "lucide-react": "^0.263.1",
     "mammoth": "^1.8.0",
     "next": "14.2.33",
