--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@radix-ui/react-slot": "^1.2.4",
     "@radix-ui/react-switch": "^1.2.6",
     "@radix-ui/react-tabs": "^1.1.13",
+    "@stripe/stripe-js": "^8.5.2",
     "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/ssr": "^0.5.2",
     "@supabase/supabase-js": "^2.47.10",
@@ -46,6 +47,7 @@
     "react-dom": "^18.3.1",
     "react-markdown": "^9.0.1",
     "redis": "^4.7.0",
+    "stripe": "^20.0.0",
     "superjson": "^2.2.2",
     "tailwind-merge": "^2.6.0",
     "tesseract.js": "^5.1.1",
