feat: add rich text editor and media library components 📝🖼️
Installed dependencies:
- TipTap rich text editor + all extensions (table, image, link, youtube, etc)
- react-dropzone for file uploads
- character count extension

Created components:
✅ RichTextEditor.tsx - Full WYSIWYG editor
✅ MediaLibrary.tsx - File upload & management
✅ Migration 014 - Storage policies

Next: Build admin forms for CPD, Blog, Webinars

--- a/package.json
+++ b/package.json
@@ -27,6 +27,17 @@
     "@supabase/ssr": "^0.5.2",
     "@supabase/supabase-js": "^2.47.10",
     "@tanstack/react-query": "^5.62.8",
+    "@tiptap/extension-character-count": "^3.11.0",
+    "@tiptap/extension-image": "^3.11.0",
+    "@tiptap/extension-link": "^3.11.0",
+    "@tiptap/extension-placeholder": "^3.11.0",
+    "@tiptap/extension-table": "^3.11.0",
+    "@tiptap/extension-table-cell": "^3.11.0",
+    "@tiptap/extension-table-header": "^3.11.0",
+    "@tiptap/extension-table-row": "^3.11.0",
+    "@tiptap/extension-youtube": "^3.11.0",
+    "@tiptap/react": "^3.11.0",
+    "@tiptap/starter-kit": "^3.11.0",
     "@trpc/client": "^11.0.0-rc.687",
     "@trpc/react-query": "^11.0.0-rc.687",
     "@trpc/server": "^11.0.0-rc.687",
@@ -45,6 +56,7 @@
     "pdf-parse": "^1.1.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-dropzone": "^14.3.8",
     "react-markdown": "^9.0.1",
     "redis": "^4.7.0",
     "stripe": "^20.0.0",
