fix: add nixpacks.toml to resolve Railway build error

--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,6 +1,11 @@
 [phases.setup]
-nixPkgs = ["nodejs_20", "npm-10_x"]
+nixPkgs = ["nodejs_20"]
+
+[phases.install]
+cmds = ["npm install"]
+
+[phases.build]
+cmds = ["npm run build"]
 
 [start]
-cmd = "NODE_OPTIONS='--dns-result-order=ipv4first' npm start"
-
+cmd = "npm start"
