--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -2,7 +2,7 @@
 nixPkgs = ["nodejs_20"]
 
 [phases.install]
-cmds = ["npm install --ignore-scripts"]
+cmds = ["npm ci --ignore-scripts"]
 
 [phases.build]
 cmds = ["npm run build"]
