--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.3.8",
     "react-markdown": "^9.0.1",
+    "recharts": "^3.5.0",
     "redis": "^4.7.0",
     "stripe": "^20.0.0",
     "superjson": "^2.2.2",
