feat: ONE-CLICK BLOG GENERATOR (Gamma-style complete automation)
🚀 MASSIVE UPGRADE - Full AI blog generation:

**One-Click Generator:**
- Enter a topic → Get a complete professional blog post in 30-60s
- Uses multiple AI models:
  - GPT-4o: Creative content writing
  - Claude 3.5 Sonnet: Visual layout generation
  - Flux Pro: AI-generated hero images
  - Automatic SEO optimization

**Features:**
- Structured layout storage (migration 022)
- AI-generated stat cards, charts, timelines
- Hero image generation with Flux Pro via Replicate
- Full SEO metadata (title, description, tags, slug)
- Advanced options (tone, length, template style)
- Real-time progress updates
- Generation history tracking

**Integration:**
- Prominent UI in blog post form for new posts
- Populates all form fields automatically
- Edit and customize after generation
- Template presets (Data Story, Guide, Case Study, Classic)

**Models:**
- GPT-4o (OpenRouter) - Content writing
- Claude 3.5 Sonnet (OpenRouter) - Layout design
- Flux Pro (Replicate) - Image generation

This is THE killer feature - Gamma-quality blog generation!

--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "react-markdown": "^9.0.1",
     "recharts": "^3.5.0",
     "redis": "^4.7.0",
+    "replicate": "^1.4.0",
     "stripe": "^20.0.0",
     "superjson": "^2.2.2",
     "tailwind-merge": "^2.6.0",
