--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "recharts": "^3.5.0",
     "redis": "^4.7.0",
     "replicate": "^1.4.0",
+    "resend": "^6.5.2",
     "stripe": "^20.0.0",
     "superjson": "^2.2.2",
     "tailwind-merge": "^2.6.0",
