--- a/package.json
+++ b/package.json
@@ -70,6 +70,9 @@
     "zod": "^3.24.1"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
     "@types/file-saver": "^2.0.7",
     "@types/node": "^22",
     "@types/react": "^18",
@@ -84,6 +87,7 @@
     "eslint-config-prettier": "^10.1.8",
     "husky": "^9.1.7",
     "lint-staged": "^15.2.11",
+    "msw": "^2.12.3",
     "postcss": "^8.4.49",
     "prettier": "^3.6.2",
     "sonarqube-scanner": "^3.3.0",
